#62677: Predefine Search possibilities. Case settings page. #62678: Predefine Search possibilities. Template settings.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -268,7 +268,7 @@
                                             @if (Model.ComputerUserCategories.Any())
                                             {
                                                 <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.ReportedBy, CaseSolutionFields.UserNumber)">
-                                                    <td>Search category</td>
+                                                    <td>@Translation.GetCoreTextTranslation("Sök kategori")</td>
                                                     <td>
                                                         @Html.DropDownList("InitiatorCategory",
                                                             Model.ComputerUserCategories.Select(o => new SelectListItem()
