--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -151,12 +151,49 @@
                     <input type="hidden" name="CaseFieldSettingWithLangauges[0].FieldHelp" value="0" />
                 </td>
                 <td class="tableth18x">@RenderLockedFieldOption("CaseFieldSettings[0].Locked", Model.CaseFieldSettings.getLocked(GlobalEnums.TranslationCaseFields.ReportedBy.ToString()))</td>
-                                
             </tr>
             <tr>
-                <td>
-                    <i class="dh-icon-textfield" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält")"></i>
+                <td class="tableth2x">
+                    <i class="dh-icon-select" rel="tooltip" title="@Translation.GetCoreTextTranslation("Vallista - dropdown")"></i>
                 </td>
+                <td class="tableth9x">
+                    @Translation.GetCoreTextTranslation(FieldSettingsUiNames.Names[GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()])
+                </td>
+                <td class="tableth5x">
+                    <input type="checkbox" name="CaseFieldSettings[73].ShowOnStartPage" @(Model.CaseFieldSettings.getShowOnStartPage(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                    <input type="hidden" name="CaseFieldSettings[73].ShowOnStartPage" value="0" />
+                    <input type="hidden" name="CaseFieldSettings[73].Name" value="UserSearchCategory_Id" />
+                    <input type="hidden" name="CaseFieldSettings[73].Customer_Id" value="@Model.Customer.Id" />
+                    <input type="hidden" name="CaseFieldSettings[73].Id" value="@Model.CaseFieldSettings.getCaseFieldSettingId(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettings[73].EMailIdentifier" value="@Model.CaseFieldSettings.getEMailIdentifier(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettings[73].CaseFieldSettingsGUID" value="@Model.CaseFieldSettings.getCaseFieldSettingsGUID(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
+                </td>
+                <td class="tableth8x">
+                    <input type="checkbox" name="CaseFieldSettings[73].ShowExternal" disabled="disabled" />
+                    <input type="hidden" name="CaseFieldSettings[73].ShowExternal" value="0" />
+                </td>
+                <td class="tableth20x">
+                    <input type="text" name="CaseFieldSettingWithLangauges[73].Label" value="@Model.CaseFieldSettingWithLangauges.getLabel(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettingWithLangauges[73].Name" value="UserSearchCategory_Id" />
+                </td>
+                <td class="tableth8x">
+                    <input type="checkbox" name="CaseFieldSettings[73].Required" @(Model.CaseFieldSettings.getRequired(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                    <input type="hidden" name="CaseFieldSettings[73].Required" value="0" />
+                </td>                                
+                <td class="tableth8x">
+                    <input type="checkbox" name="CaseFieldSettings[73].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                    <input type="hidden" name="CaseFieldSettings[73].RequiredIfReopened" value="0" />
+                </td>
+                <td class="tableth6x"></td>
+                <td class="tableth20x">
+                    <input type="text" name="CaseFieldSettingWithLangauges[73].FieldHelp" value="@Model.CaseFieldSettingWithLangauges.getFieldHelp(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())" maxlength="200" />
+                    <input type="hidden" name="CaseFieldSettingWithLangauges[73].FieldHelp" value="0" />
+                </td>
+                <td class="tableth18x">@RenderLockedFieldOption("CaseFieldSettings[73].Locked", Model.CaseFieldSettings.getLocked(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()))</td>
+            </tr>
+
+            <tr>
+                <td><i class="dh-icon-textfield" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält")"></i></td>
                 <td>
                     @Translation.GetCoreTextTranslation(FieldSettingsUiNames.Names[GlobalEnums.TranslationCaseFields.Persons_Name.ToString()])
                 </td>
@@ -733,6 +770,46 @@
                 </td>
                 <td>@RenderLockedFieldOption("CaseFieldSettings[59].Locked", Model.CaseFieldSettings.getLocked(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy.ToString()))</td>
             </tr>
+            <tr>
+                <td><i class="dh-icon-select" rel="tooltip" title="@Translation.GetCoreTextTranslation("Vallista - dropdown")"></i></td>
+                <td>@Translation.GetCoreTextTranslation(FieldSettingsUiNames.Names[GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString()])</td>
+                <td>
+                    <input type="checkbox" name="CaseFieldSettings[74].ShowOnStartPage" @(Model.CaseFieldSettings.getShowOnStartPage(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                    <input type="hidden" name="CaseFieldSettings[74].ShowOnStartPage" value="0" />
+                    <input type="hidden" name="CaseFieldSettings[74].Customer_Id" value="@Model.Customer.Id" />
+                    <input type="hidden" name="CaseFieldSettings[74].Name" value="IsAbout_UserSearchCategory_Id" />
+                    <input type="hidden" name="CaseFieldSettings[74].Id" value="@Model.CaseFieldSettings.getCaseFieldSettingId(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettings[74].EMailIdentifier" value="@Model.CaseFieldSettings.getEMailIdentifier(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettings[74].CaseFieldSettingsGUID" value="@Model.CaseFieldSettings.getCaseFieldSettingsGUID(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                </td>
+                <td>
+                    <input type="checkbox" name="CaseFieldSettings[74].ShowExternal"  disabled="disabled"  />
+                    <input type="hidden" name="CaseFieldSettings[74].ShowExternal" value="0" />
+                </td>
+                <td>
+                    <input type="text" name="CaseFieldSettingWithLangauges[74].Label" value="@Model.CaseFieldSettingWithLangauges.getLabel(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettingWithLangauges[74].Name" value="IsAbout_UserSearchCategory_Id" />
+                </td>
+                <td>
+                    &nbsp;
+                    @*<input type="checkbox" name="CaseFieldSettings[74].Required" @(Model.CaseFieldSettings.getRequired(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory.ToString()) == 1 ? "checked=checked" : "") value="1"/>
+                    <input type="hidden" name="CaseFieldSettings[74].Required" value="0" />*@
+                </td>
+                <td>
+                    &nbsp;
+                    @*<input type="checkbox" name="CaseFieldSettings[74].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory.ToString()) == 1 ? "checked=checked" : "") value="1" />
+    <input type="hidden" name="CaseFieldSettings[74].RequiredIfReopened" value="0" />*@
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+                <td>
+                    <input type="text" name="CaseFieldSettingWithLangauges[74].FieldHelp" value="@Model.CaseFieldSettingWithLangauges.getFieldHelp(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())" />
+                    <input type="hidden" name="CaseFieldSettingWithLangauges[74].FieldHelp" value="0" />
+                </td>
+                <td>@RenderLockedFieldOption("CaseFieldSettings[74].Locked", Model.CaseFieldSettings.getLocked(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString()))</td>
+            </tr>
+                
             <tr>
                 <td>
                     <i class="dh-icon-textfield" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält")"></i>
