--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -350,20 +350,45 @@
                                     <tr>
                                         @*<th colspan="3" class="header">@Translation.Get("Användarinformation")</th>*@
                                         @{  var myIndex = 0;
-                                                var curId = "";
-                                                foreach (var cs in Model.CaseSolutionSettingModels)
-                                                {
-                                                    curId = "hide_" + cs.CaseSolutionField;
-                                            <input type="hidden" name="CaseSolutionSettingModels[@myIndex].id" value="@cs.Id" />
-                                            <input type="hidden" name="CaseSolutionSettingModels[@myIndex].CaseSolutionField" value="@cs.CaseSolutionField" />
-                                            <input type="hidden" name="CaseSolutionSettingModels[@myIndex].CaseSolutionMode" value="@cs.CaseSolutionMode" id="@curId" />
-                                                    myIndex = myIndex + 1;
-                                                }
+                                            var curId = "";
+                                            foreach (var cs in Model.CaseSolutionSettingModels)
+                                            {
+                                                curId = "hide_" + cs.CaseSolutionField;
+                                                <input type="hidden" name="CaseSolutionSettingModels[@myIndex].id" value="@cs.Id" />
+                                                <input type="hidden" name="CaseSolutionSettingModels[@myIndex].CaseSolutionField" value="@cs.CaseSolutionField" />
+                                                <input type="hidden" name="CaseSolutionSettingModels[@myIndex].CaseSolutionMode" value="@cs.CaseSolutionMode" id="@curId" />
+                                                myIndex = myIndex + 1;
+                                            }
                                         }
                                     </tr>
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
+                                        <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString())">
+                                            <td>@Translation.GetForCase(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString(), Model.CaseSolution.Customer_Id)</td>
+                                            <td>
+                                                @Html.DropDownListFor(model =>
+                                                    model.CaseSolution.UserSearchCategory_Id, Model.UserSearchCategories, "",
+                                                    new
+                                                    {
+                                                        id = "UserSearchCategory", @*class = "acceptRules",*@ standardId = GlobalEnums.TranslationCaseFields.UserSearchCategory_Id.ToString()
+                                                    })
+                                            </td>
+                                            <td>
+                                                <table>
+                                                    <tr id="stateIconPlace_@GlobalEnums.TranslationCaseFields.Region_Id.ToString()">
+                                                        @*State icons will be added Here*@
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                            <td>
+                                                @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.UserSearchCategory, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.UserSearchCategory_Id)
+                                            </td>
+                                        </tr>
+                                    }
+
+                                    @if (Model.CaseFieldSettings.Count() != 0)
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.ReportedBy.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.ReportedBy.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -382,9 +407,11 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.UserNumber, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.ReportedBy)
                                             </td>
                                         </tr>
-                                        }
+
+                                    }
+
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Persons_Name.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Persons_Name.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -403,10 +430,10 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.PersonsName, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Persons_Name)
                                             </td>
                                         </tr>
-                                        }
+                                    }
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Persons_EMail.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Persons_EMail.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -425,10 +452,10 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.PersonsEmail, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Persons_EMail)
                                             </td>
                                         </tr>
-                                        }
+                                    }
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr>
                                             <td>
                                                 @Translation.Get("Informera anmälaren", Enums.TranslationSource.TextTranslation)
@@ -450,9 +477,9 @@
                                             </td>
 
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Persons_Phone.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Persons_Phone.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -471,9 +498,9 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.PersonsPhone, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Persons_Phone)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Persons_CellPhone.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Persons_CellPhone.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -492,9 +519,9 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.PersonsCellPhone, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Persons_CellPhone)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Region_Id.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Region_Id.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -513,9 +540,9 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.Region, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Region_Id)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Department_Id.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Department_Id.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -534,9 +561,9 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.Department, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Department_Id)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.OU_Id.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.OU_Id.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -555,10 +582,10 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.OU, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.OU_Id)
                                             </td>
                                         </tr>
-                                        }
+                                    }
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.CostCentre.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.CostCentre.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -577,10 +604,10 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.CostCentre, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.CostCentre)
                                             </td>
                                         </tr>
-                                        }
+                                    }
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Place.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.Place.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -599,10 +626,10 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.Place, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.Place)
                                             </td>
                                         </tr>
-                                        }
+                                    }
 
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.UserCode.ToString())">
                                             <td>
                                                 @Translation.Get(GlobalEnums.TranslationCaseFields.UserCode.ToString(), Enums.TranslationSource.CaseTranslation, Model.CaseSolution.Customer_Id)
@@ -621,9 +648,9 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.Usercode, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.UserCode)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
-                                        {
+                                    {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.UpdateNotifierInformation.ToString())">
                                             <td>
                                                 @Translation.Get("Spara användaruppgifter", SessionFacade.CurrentLanguageId)
@@ -643,7 +670,7 @@
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.UpdateNotifierInformation, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.UpdateNotifierInformation)
                                             </td>
                                         </tr>
-                                        }
+                                    }
                                     @if (Model.CaseFieldSettings.Count() != 0)
                                     {
                                         <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.AddFollowersBtn.ToString())">
@@ -666,7 +693,7 @@
                                         </tr>
                                     }
                                 </table>
-                            </div>
+                          </div>
                         </div>
                     </div>
                     @*IsABout*@
@@ -708,6 +735,25 @@
                                             </td>
                                             <td>
                                                 @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.IsAbout_ReportedBy, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy)
+                                            </td>
+                                        </tr>
+
+                                        <tr style="@Model.CaseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString())">
+                                            <td>@Translation.GetForCase(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString(), Model.CaseSolution.Customer_Id)</td>
+                                            <td>
+                                                @Html.DropDownListFor(model => model.CaseSolution.IsAbout_UserSearchCategory_Id, Model.UserSearchCategories, "",
+                                                    new { id = "IsAbout_UserSearchCategory", @*class = "acceptRules",*@ standardId = GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id.ToString() })
+                                            </td>
+                                            <td>
+                                                <table>
+                                                    <tr id="stateIconPlace_@GlobalEnums.TranslationCaseFields.Region_Id.ToString()">
+                                                        @*State icons will be added Here*@
+                                                    </tr>
+                                                </table>
+                                            </td>
+
+                                            <td>
+                                                @Html.CaseSolutionSettingsFor(x => x.CaseSolutionSettingModels, CaseSolutionFields.IsAbout_UserSearchCategory, Model.CaseFieldSettings, GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id)
                                             </td>
                                         </tr>
                                     }
