--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -269,19 +269,7 @@
                                             {
                                                 <tr class="displaytr" style="@(Model.InitiatorUserCategoryVisible ? "" : "display:none")">
                                                     <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id, "Sök kategori")</td>
-                                                    <td>
-                                                        @Html.DropDownList("InitiatorCategory",
-                                                            Model.ComputerUserCategories.Select(o => new SelectListItem()
-                                                            {
-                                                                Text = o.Name,
-                                                                Value = o.Id.ToString(),
-                                                                Selected = Model.InitiatorComputerUserCategory != null && o.Id == Model.InitiatorComputerUserCategory.ID
-                                                            }).ToList().Use(o =>
-                                                            {
-                                                                o.Insert(0, new SelectListItem() { Text = Translation.GetCoreTextTranslation(Model.EmptyComputerCategoryName), Value = "null" });
-                                                                return o;
-                                                            }))
-                                                    </td>
+                                                    <td>@Html.DropDownList("InitiatorCategory", Model.BuildComputerCategoriesSelectList(Model.InitiatorComputerUserCategory != null ? (int?)Model.InitiatorComputerUserCategory.ID : null))</td>
                                                 </tr>
                                             }
                                             <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.ReportedBy, CaseSolutionFields.UserNumber)">
@@ -617,22 +605,7 @@
                                             <tr class="displaytr" style="@(Model.RegardingUserCategoryVisible ? "" : "display:none")">
                                                 <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id, "Sök kategori")</td>
                                                 <td>
-                                                    @Html.DropDownList("IsAboutCategory",
-                                                        Model.ComputerUserCategories.Select(o => new SelectListItem()
-                                                        {
-                                                            Text = o.Name,
-                                                            Value = o.Id.ToString(),
-                                                            Selected = Model.RegardingComputerUserCategory != null && o.Id == Model.RegardingComputerUserCategory.ID
-                                                        }).ToList()
-                                                        .Use(o =>
-                                                        {
-                                                            o.Insert(0, new SelectListItem()
-                                                            {
-                                                                Text = Translation.GetCoreTextTranslation(Model.EmptyComputerCategoryName),
-                                                                Value = "null"
-                                                            });
-                                                            return o;
-                                                        }))
+                                                    @Html.DropDownList("IsAboutCategory", Model.BuildComputerCategoriesSelectList(Model.RegardingComputerUserCategory != null ? (int?)Model.RegardingComputerUserCategory.ID : null))
                                                 </td>
                                             </tr>
                                         }
