#62743 - Russia - Sorting prod area. Fixed rtl for numbers.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4007,6 +4007,7 @@ th.sorting_disabled
     text-align: left;
 }
 
+.subddMenu li{ direction: ltr!important; }
 
 .dropdown-menu.modified .dropdown-submenu:hover > .subMenuWrapper > .dropdown-menu {
     display: block;
