[UPD]#62797	Initiator/Regarding category, new requirements. Categories management pages.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/EditUserCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/EditUserCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model DH.Helpdesk.Domain.Computers.ComputerUserCategory
+﻿@model DH.Helpdesk.BusinessData.Models.ComputerUsers.ComputerUserCategoryData
 
 <div class="secnavs fixed">
     <div class="pull-left">
