--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_CategoryInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/_CategoryInput.cshtml
@@ -1,8 +1,8 @@
-﻿@model DH.Helpdesk.Domain.Computers.ComputerUserCategory
+﻿@model DH.Helpdesk.BusinessData.Models.ComputerUsers.ComputerUserCategoryData
 
 <div class="container">
     <div>
-        <h4>@Translation.GetCoreTextTranslation("Kategori") [Fixed]</h4>
+        <h4>@Translation.GetCoreTextTranslation("Kategori") @(Model.IsEmpty ? "[Fixed]" : "")</h4>
         <div class="row">
             <div class="span12">
                 <table class="tableform">
@@ -20,11 +20,29 @@
                     <tr>
                         <td>@Translation.GetCoreTextTranslation("Skrivskyddad")</td>
                         <td>
-                            <input type="checkbox" name="IsReadOnly" 
-                                   @(Model.IsReadOnly ? "checked=checked" : "")
-                                   @(Model.IsEmpty ? "readonly=readonly": "") value="true" />
-                            <input type="hidden" name="IsReadOnly" value="false" />
+                            @if (Model.IsEmpty)
+                            {
+                                <input type="checkbox" name="IsReadOnly"
+                                       @(Model.IsReadOnly ? "checked=checked" : "")
+                                       readonly="readonly" onclick='return false' 
+                                       value="true"/>
+                            }
+                            else
+                            {
+                                <input type="checkbox" name="IsReadOnly"
+                                       @(Model.IsReadOnly ? "checked=checked" : "")
+                                       value="true"/>
+                            }
+                            <input type="hidden" name="IsReadOnly" value="false"/>
                         </td>
+                    </tr>
+                    <tr>
+                        <td>Initiator default category</td>
+                        <td>@Html.CheckBoxFor(m => m.DefaultInitiatorCategory, new { @class = "switchcheckbox" })</td>        
+                    </tr>
+                    <tr>
+                        <td>Regarding default category</td>
+                        <td>@Html.CheckBoxFor(m => m.DefaultRegardingCategory, new { @class = "switchcheckbox" })</td>
                     </tr>
                     </tbody>
                 </table>
@@ -32,6 +50,6 @@
         </div>
     </div>
 </div>
-@Html.Hidden("Id", @Model.ID.ToString())
-@Html.Hidden("CustomerId", @Model.CustomerID.ToString())
+@Html.Hidden("Id", @Model.Id.ToString())
+@Html.Hidden("CustomerId", @Model.CustomerId.ToString())
 @Html.Hidden("IsEmpty", @Model.IsEmpty ? "true" : "false")
