[FIX] #62882 Value in field Supplier isn't saved

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -129,7 +129,7 @@
                     @Html.HiddenFor(model => model.NewCase.PlanDate)
                     @Html.HiddenFor(model => model.NewCase.Performer_User_Id)
                     @Html.HiddenFor(model => model.NewCase.InvoiceNumber)
-                    @Html.HiddenFor(model => model.NewCase.Supplier_Id)
+                    @*@Html.HiddenFor(model => model.NewCase.Supplier_Id)*@
                     @Html.HiddenFor(model => model.NewCase.Change_Id)
                     @Html.HiddenFor(model => model.NewCase.FinishingDescription)
                     @Html.HiddenFor(model => model.NewCase.ProductArea_Id)
